--- a/ODK.Web.Razor/Pages/Groups/Contact.cshtml
+++ b/ODK.Web.Razor/Pages/Groups/Contact.cshtml
@@ -6,7 +6,8 @@
 @{
     Layout = "_HomeLayout";
 
-    var viewModel = await ChapterViewModelService.GetGroupContactPage(Model.CurrentMemberIdOrDefault, Model.Slug);
+    var viewModel = await ChapterViewModelService.GetGroupContactPage(
+        Model.ServiceRequest, Model.CurrentMemberIdOrDefault, Model.Slug);
 
     Model.Title = $"Contact | {viewModel.Chapter.Name}";
 }
