--- a/ODK.Web.Razor/Pages/Groups/Members/Index.cshtml
+++ b/ODK.Web.Razor/Pages/Groups/Members/Index.cshtml
@@ -9,7 +9,7 @@
 @{
     Layout = "_HomeLayout";
 
-    var viewModel = await MemberViewModelService.GetGroupMembersPage(Model.CurrentMemberId, Model.Slug);
+    var viewModel = await MemberViewModelService.GetGroupMembersPage(Model.MemberServiceRequest, Model.Slug);
 
     if (!viewModel.IsMember)
     {
