--- a/ODK.Web.Razor/Pages/Groups/Events/Past.cshtml
+++ b/ODK.Web.Razor/Pages/Groups/Events/Past.cshtml
@@ -6,7 +6,8 @@
 @{
     Layout = "_HomeLayout";
 
-    var viewModel = await ChapterViewModelService.GetGroupPastEventsPage(Model.CurrentMemberIdOrDefault, Model.Slug);
+    var viewModel = await ChapterViewModelService.GetGroupPastEventsPage(
+        Model.ServiceRequest, Model.CurrentMemberIdOrDefault, Model.Slug);
 }
 
 @await Html.PartialAsync("Groups/_GroupBody", new GroupBodyViewModel
