--- a/ODK.Web.Razor/Pages/Groups/FAQ.cshtml
+++ b/ODK.Web.Razor/Pages/Groups/FAQ.cshtml
@@ -6,7 +6,8 @@
 @{
     Layout = "_HomeLayout";
 
-    var viewModel = await ChapterViewModelService.GetGroupQuestionsPage(Model.CurrentMemberIdOrDefault, Model.Slug);
+    var viewModel = await ChapterViewModelService.GetGroupQuestionsPage(
+        Model.ServiceRequest, Model.CurrentMemberIdOrDefault, Model.Slug);
 
     Model.Title = $"FAQ | {viewModel.Chapter.Name}";
 }
