--- a/ODK.Web.Razor/Pages/Groups/Join.cshtml
+++ b/ODK.Web.Razor/Pages/Groups/Join.cshtml
@@ -9,7 +9,8 @@
 @{
     Layout = "_HomeLayout";
 
-    var viewModel = await ChapterViewModelService.GetGroupJoinPage(Model.CurrentMemberIdOrDefault, Model.Slug);
+    var viewModel = await ChapterViewModelService.GetGroupJoinPage(
+        Model.ServiceRequest, Model.CurrentMemberIdOrDefault, Model.Slug);
 
     Model.Title = $"Join | {viewModel.Chapter.Name}";
 }
