--- a/ODK.Web.Razor/Pages/Groups/Profile/Index.cshtml
+++ b/ODK.Web.Razor/Pages/Groups/Profile/Index.cshtml
@@ -9,7 +9,7 @@
 @{
     Layout = "_HomeLayout";
 
-    var viewModel = await ChapterViewModelService.GetGroupProfilePage(Model.CurrentMemberId, Model.Slug);
+    var viewModel = await ChapterViewModelService.GetGroupProfilePage(Model.MemberServiceRequest, Model.Slug);
 
     Model.Title = $"Profile | {viewModel.Chapter.Name}";
 }
