--- a/ODK.Web.Razor/Views/Shared/Site/_SiteAlerts.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Site/_SiteAlerts.cshtml
@@ -1,12 +1,11 @@
 ﻿@using ODK.Core.Utils
 @using ODK.Services.Chapters
-@using ODK.Web.Common.Extensions
 @using ODK.Web.Common.Routes
 @using ODK.Web.Razor.Models
 @model OdkComponentContext
 @inject IChapterService ChapterService
 @{
-    var memberId = User.MemberIdOrDefault();
+    var memberId = Model.CurrentMemberId;
 
     var ownedChapters = memberId != null 
         ? await ChapterService.GetChaptersByOwnerId(memberId.Value)
