--- a/ODK.Web.Razor/Views/Shared/Account/_PaymentsContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Account/_PaymentsContent.cshtml
@@ -14,7 +14,7 @@
             </tr>
         </thead>
         <tbody>
-            @foreach (var dto in Model.Payments.OrderByDescending(x => x.Payment.PaidUtc))
+            @foreach (var dto in Model.Payments.OrderByDescending(x => x.Payment.CreatedUtc))
             {
                 var payment = dto.Payment;
                 
@@ -26,7 +26,11 @@
                         @if (payment.PaidUtc != null)
                         {
                             @payment.PaidUtc.Value.ToFriendlyDateTimeString(Model.CurrentMember.TimeZone ?? dto.Chapter.TimeZone)
-                        }                        
+                        }
+                        else
+                        {
+                            <span class="badge bg-danger">INCOMPLETE</span>
+                        }
                     </td>
                     <td>
                         @dto.Currency.ToAmountString(payment.Amount)
