--- a/ODK.Web.Razor/Views/Shared/SuperAdmin/_FeaturesContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/SuperAdmin/_FeaturesContent.cshtml
@@ -39,7 +39,7 @@
                         <form action="/superadmin/features/@feature.Id/delete" method="post">
                             @*@Html.AntiForgeryToken()*@
                             <button class="btn-icon text-danger" onclick="return confirm('Are you sure you want to delete this feature?');">
-                                    <i class="fas fa-times"></i>
+                                    @await Html.PartialAsync("Components/Icons/_Times")
                             </button>
                         </form>
                     </td>
