--- a/ODK.Web.Razor/Views/Shared/SuperAdmin/_MessagesContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/SuperAdmin/_MessagesContent.cshtml
@@ -5,6 +5,7 @@
 @using ODK.Services.Contact.ViewModels
 @using ODK.Web.Common.Extensions
 @using ODK.Web.Common.Routes
+@using ODK.Web.Razor.Models.Components
 @model MessagesAdminPageViewModel
 
 <h2>Messages</h2>
@@ -32,7 +33,10 @@
                     <td>
                         @if (message.RepliedUtc != null)
                         {
-                            <i class="fas fa-check-circle text-success"></i>
+                            @await Html.PartialAsync("Components/Icons/_CircleCheck", new IconViewModel
+                            {
+                                Class = "text-success"
+                            })
                         }
                     </td>
                     <td>
@@ -43,7 +47,7 @@
                             @*@Html.AntiForgeryToken()*@
                             <button data-bs-toggle="tooltip" data-bs-title="Delete" class="btn-icon text-danger"
                                     onclick="return confirm('Are you sure you want to delete this message?');">
-                                <i class="fas fa-times"></i>
+                                    @await Html.PartialAsync("Components/Icons/_Times")
                             </button>
                         </form>
                     </td>
