--- a/ODK.Web.Razor/Views/Shared/Admin/Members/_SubscriptionsContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Admin/Members/_SubscriptionsContent.cshtml
@@ -89,7 +89,7 @@
                                         <form method="post" action="/groups/@Model.Chapter.Id/members/subscriptions/@subscription.Id/delete">
                                             <button data-bs-toggle="tooltip" data-bs-title="Delete" class="btn-icon text-danger"
                                                     onclick="return confirm('Are you sure you want to delete this subscription?');">
-                                                <i class="fas fa-times"></i>
+                                                @await Html.PartialAsync("Components/Icons/_Times")
                                             </button>
                                         </form>
                                     }                                    
