--- a/ODK.Web.Razor/Views/Shared/SuperAdmin/_ChapterEmailsContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/SuperAdmin/_ChapterEmailsContent.cshtml
@@ -37,7 +37,7 @@
                         <form method="post" action="/superadmin/groups/@Model.Value.Id/emails/providers/@emailProvider.Id/delete">
                             <button data-bs-toggle="tooltip" data-bs-title="Delete" class="btn-icon text-danger"
                                     onclick="return confirm('Are you sure you want to delete this email provider?');">
-                                <i class="fas fa-times"></i>
+                                @await Html.PartialAsync("Components/Icons/_Times")
                             </button>
                         </form>
                     </td>
