--- a/ODK.Web.Razor/Views/Shared/SuperAdmin/_EmailProviders.cshtml
+++ b/ODK.Web.Razor/Views/Shared/SuperAdmin/_EmailProviders.cshtml
@@ -31,7 +31,7 @@
                         <form method="post" action="/superadmin/emails/providers/@provider.Id/delete">
                             <button data-bs-toggle="tooltip" data-bs-title="Delete" class="btn-icon text-danger"
                                     onclick="return confirm('Are you sure you want to delete this email provider?');">
-                                <i class="fas fa-times"></i>
+                                @await Html.PartialAsync("Components/Icons/_Times")
                             </button>
                         </form>
                     </td>
