--- a/ODK.Web.Razor/Views/Shared/SuperAdmin/_ErrorsContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/SuperAdmin/_ErrorsContent.cshtml
@@ -33,7 +33,7 @@
                             <form method="post" action="/SuperAdmin/Errors/@error.Id/Delete">
                                 @*@Html.AntiForgeryToken()*@
                                 <button data-bs-toggle="tooltip" data-bs-title="Delete" class="btn-icon text-danger">
-                                    <i class="fas fa-times"></i>
+                                    @await Html.PartialAsync("Components/Icons/_Times")
                                 </button>
                             </form>
                         </td>
