(cookie consent): fix broken dismiss

--- a/ODK.Web.Razor/wwwroot/css/_cookieconsent.scss
+++ b/ODK.Web.Razor/wwwroot/css/_cookieconsent.scss
@@ -19,6 +19,12 @@
     transition: opacity 1s ease;
 }
 
+.cc-hidden {
+    .cc-window {
+        display: none;
+    }
+}
+
 .cc-message {
     flex: 1 1 auto;
 }
