--- a/ODK.Web.Razor/wwwroot/css/odk.css
+++ b/ODK.Web.Razor/wwwroot/css/odk.css
@@ -12073,6 +12073,10 @@ html[data-platform=odk] {
   transition: opacity 1s ease;
 }
 
+.cc-hidden .cc-window {
+  display: none;
+}
+
 .cc-message {
   flex: 1 1 auto;
 }
